0.25.8
------

* Fix bug where the content type is always recorded as either text/plain or application/json. See #770
* Allow asserts on add_callback() matches. See #727

0.25.7
------

* Added support for python 3.13

0.25.6
------

* Added py.typed to package_data

0.25.5
------

* Fix readme issue that prevented 0.25.4 from being published to pypi.

0.25.4
------

* Responses can now match requests that use `data` with file-like objects.
  Files will be read as bytes and stored in the request mock. See #736
* `RequestsMock.matchers` was added. This property is an alias to `responses.matchers`. See #739
* Removed tests from packaged wheels. See #746
* Improved recorder API to ease use in REPL environments. See #745

0.25.3
------

* Fixed `recorder` not saving and loading response headers with yaml files. See #715

0.25.2
------

* Mulligan on 0.25.1 to run release pipeline correctly.
* Added `matchers.body_matcher` for matching string request bodies. See #717

0.25.1
------

* Fixed tests failures during RPM package builds. See #706
* Fix mocked HEAD responses that have `Content-Length` set. See #712
* Fixed error messages when matches fail: inputs are not sorted or reformatted. See #704

0.25.0
------

* Added support for Python 3.12
* Fixed `matchers.header_matcher` not failing when a matched header is missing from the request. See #702


0.24.1
------

* Reverted overloads removal
* Added typing to `Call` attributes.
* Fix socket issues (see #693)


0.24.0
------

* Added `BaseResponse.calls` to access calls data of a separate mocked request. See #664
* Added `real_adapter_send` parameter to `RequestsMock` that will allow users to set
  through which function they would like to send real requests
* Added support for re.Pattern based header matching.
* Added support for gzipped response bodies to `json_params_matcher`.
* Fix `Content-Type` headers issue when the header was duplicated. See #644
* Moved types-pyyaml dependency to `tests_requires`