@@ -1,3 +1,8 @@
+0.x.y
+-----
+
+* Consider the `Retry-After` header when handling retries
+
 0.25.8
 ------
 
